[FIX] mail: improve btn style of 'mark all as read' and 'unstar all'
The buttons had background color that was too dark, making text hard
to read. Also there was not enough visual difference between enabled
and disabled.

This commit fixes the issue by changing btn-secondary to btn-link.
This makes the text more visible and enabled/disabled state is more
distinct. The button is less present, but that's actually not a
problem because in earlier versions of Odoo, this was a button link
too.

--- a/addons/mail/static/src/discuss_app/discuss.scss
+++ b/addons/mail/static/src/discuss_app/discuss.scss
@@ -2,10 +2,6 @@
     .o-mail-Thread {
         flex-grow: 1;
     }
-
-    .o-mail-Discuss-header button:not(.btn-secondary):hover {
-        background-color: $gray-400;
-    }
 }
 
 .o-mail-Discuss-selfAvatar {
